--- a/binance/package.json
+++ b/binance/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
