--- a/binance/package.json
+++ b/binance/package.json
@@ -17,6 +17,7 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "styled-components": "^5.3.6"
   }
 }
