--- a/binance/package.json
+++ b/binance/package.json
@@ -12,11 +12,16 @@
     "axios": "^1.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "i18next": "^22.0.6",
+    "i18next-icu": "^2.0.3",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "next": "13.0.4",
+    "next-i18next": "^13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.0.0",
+    "react-intl": "^6.2.1",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6"
   }
