--- a/binance/package.json
+++ b/binance/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/plots": "^1.2.2",
     "axios": "^1.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.0.5",
