--- a/binance/package.json
+++ b/binance/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@ant-design/plots": "^1.2.2",
     "axios": "^1.2.0",
+    "binance-connector": "^1.0.21",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.0.5",
     "i18next": "^22.0.6",
     "i18next-icu": "^2.0.3",
+    "json-server": "^0.17.1",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "next": "^13.0.5",
     "next-i18next": "^13.0.0",
+    "node-binance-api": "^0.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-intl": "^6.2.1",
+    "react-query": "^3.39.2",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6"
   },
