--- a/binance/package.json
+++ b/binance/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint",
     "server": "yarn json-server --watch data.json --port 3001"
   },
